# awfixer-bot

./: .gitignore  .gitmodules  NOTICE.md  devbox.json  main.py  pyproject.toml  pyproject.workspace.toml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  railway.yml  security.yml  tests.yml  vercel.yml
agent-guides/Achievements/: index.md
agent-guides/Components-V2/: index.md
agent-guides/DB/: influx.md  instructions.md
agent-guides/Staff/: index.md
agent-guides/Verification/: index.md
agent-guides/discord.py/: index.md
dashboard/: package.json  pnpm-lock.yaml
discord.py/docs/: conf.py
discord.py/docs/extensions/: builder.py
discord.py/tests/: test_annotated_annotation.py  test_app_commands_autocomplete.py  test_app_commands_description.py  test_app_commands_group.py  test_app_commands_invoke.py  test_colour.py  test_ext_commands_cog.py  test_files.py  test_ui_buttons.py  test_ui_modals.py  test_ui_selects.py  test_utils.py
disgord/: go.mod  go.sum
disgord/examples/application-commands/: go.mod  go.sum
disgord/examples/bot-with-msg-self-delete/: go.mod
disgord/examples/channel-with-temporary-messages/: go.mod
disgord/examples/create-threads/: go.mod
disgord/examples/logging-plug-and-play/: go.mod  go.sum
disgord/examples/message-components/: go.mod
disgord/examples/proxy/: go.mod  go.sum
verify-site/: package.json
