[project]
name = "awfixer-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "basedpyright>=1.36.2",
    "discord-py",
    "postgrest>=2.27.0",
    "realtime>=2.27.0",
    "ruff>=0.12",
    "supabase>=2.27.0",
    "supabase-auth>=2.27.0",
    "supabase-functions>=2.27.0",
]

[tool.setuptools]
packages = ["bot"]

[tool.uv.workspace]
members = ["discord.py"]

[tool.uv.sources]
discord-py = { workspace = true }

[project.optional-dependencies]
voice = ["discord-py[voice]"]
